@@ -4,7 +4,10 @@
   * Can now find button by :value
   * Added #forward and #back methods to PageObject
   * Added #right_click and #double_click methods to Element
-  * Added #value= to TextField
+  * Added #value= to TextField and TextArea
+  * Added #select to SelectList
+  * Added #check, #uncheck, and #checked? to CheckBox
+  * Added #select, #clear, and #selected? to RadioButton
   * Updated to use watir-webdriver 0.3.0
 
 === Version 0.2.3 / 2011-08-01
